# eyxp-webapi

./: .gitignore  CMakeLists.txt  README.md  library.c  library.h
web_api/: CMakeLists.txt
web_api/include/: library.h  socket_platform.h  web_api.h  web_app.h  web_config.h  web_routes.h  web_server.h  web_utils.h
web_api/src/: web_api.c  web_app.c  web_routes.c  web_server.c  web_utils.c
web_tests/: CMakeLists.txt  main.c
web_tests/src/: main.c
